ARGO-1213 API CALL-Update Binding
